--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,10 +3,13 @@ layout: default
 ---
 
 <article class="page">
-
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
     {{ content }}
+  </div>
+
+  <div class="date">
+    {{ page.date | date: "%Y-%m-%d" }}{% if page.modified %} (Updated: {{ page.modified | date: "%Y-%m-%d" }}){% endif %}
   </div>
 </article>
