--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,9 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/">Home</a>
+            <a href="{{ site.baseurl }}/about/">About</a>
+            <a href="{{ site.baseurl }}/contact/">Contact Info</a>
           </nav>
         </header>
       </div>
