--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,8 @@ layout: default
 
   <div class="date">
     {{ page.date | date: "%Y-%m-%d" }}
-    {% if page.modified %}(Updated: {{ page.modified | date: "%Y-%m-%d" }}){% endif %}{% if page.category %}, {{ page.category }}{% endif %}
+    {% if page.modified %} (Updated: {{ page.modified | date: "%Y-%m-%d" }}){% endif %}
+    {% if page.category %} in {{ page.category }}{% endif %}
   </div>
 
   {% include disqus.html %}
