--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,9 +10,9 @@ layout: default
   </div>
 
   <div class="date">
-    {{ page.date | date: "%Y-%m-%d" }}
-    {% if page.modified %} (Updated: {{ page.modified | date: "%Y-%m-%d" }}){% endif %}
+    Posted on {{ page.date | date: "%Y-%m-%d" }}
     {% if page.category %} in {{ page.category }}{% endif %}
+    {% if page.modified %} (Updated: {{ page.modified | date: "%Y-%m-%d" }}){% endif %}
   </div>
 
   {% include disqus.html %}
